[package]
name = "crust"
version = "0.1.0"
authors = ["Aaron Kelly <aaronkelly@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
hyper-tls = "0.4.1"
tokio = { version = "0.2", features = ["full"] }
pretty_env_logger = "0.4.0"